RESOLVED FIXED285718
[Win Skia] ASSERTION FAILED: bitmap->size() == updateSize : BackingStore::incorporateUpdate(UpdateInfo &&) on the fractional device pixel ratio display
https://bugs.webkit.org/show_bug.cgi?id=285718
Summary [Win Skia] ASSERTION FAILED: bitmap->size() == updateSize : BackingStore::inc...
Fujii Hironori
Reported 2025-01-09 18:07:45 PST
[Win Skia] ASSERTION FAILED: bitmap->size() == updateSize : BackingStore::incorporateUpdate(UpdateInfo &&) on the fractional device pixel ratio display 1. Start Windows Skia MiniBrowser in 150% DPI display 2. Load https://webkit.org 3. Open Inspector 4. An assertion fails ASSERTION FAILED: bitmap->size() == updateSize C:\webkit\wc\Source\WebKit\UIProcess\skia\BackingStoreSkia.cpp(83) : void WebKit::BackingStore::incorporateUpdate(UpdateInfo &&) 1 00007FFDA8A2C496 WebKit::BackingStore::incorporateUpdate 2 00007FFDA89F5DA5 WebKit::DrawingAreaProxyWC::incorporateUpdate 3 00007FFDA89F5B76 WebKit::DrawingAreaProxyWC::update 4 00007FFDA8DAD5DD IPC::callMemberFunction<WebKit::DrawingAreaProxy,WebKit::DrawingAreaProxy,void (unsigned long long, WebKit::UpdateInfo &&),std::tuple<unsigned long long,WebKit::UpdateInfo> >::<lambda_1>::operator()<unsigned long long,WebKit::UpdateInfo> 5 00007FFDA8DAD567 std::invoke<`lambda at C:\webkit\wc\Source\WebKit\Platform\IPC\HandleMessage.h:132:9',unsigned long long,WebKit::UpdateInfo> 6 00007FFDA8DAD52E std::_Apply_impl<`lambda at C:\webkit\wc\Source\WebKit\Platform\IPC\HandleMessage.h:132:9',std::tuple<unsigned long long,WebKit::UpdateInfo>,0,1> 7 00007FFDA8DAD4E2 std::apply<`lambda at C:\webkit\wc\Source\WebKit\Platform\IPC\HandleMessage.h:132:9',std::tuple<unsigned long long,WebKit::UpdateInfo> > 8 00007FFDA8DACC4F IPC::callMemberFunction<WebKit::DrawingAreaProxy,WebKit::DrawingAreaProxy,void (unsigned long long, WebKit::UpdateInfo &&),std::tuple<unsigned long long,WebKit::UpdateInfo> > 9 00007FFDA8DA9D10 IPC::handleMessage<Messages::DrawingAreaProxy::Update,IPC::Connection,WebKit::DrawingAreaProxy,WebKit::DrawingAreaProxy,void (unsigned long long, WebKit::UpdateInfo &&)> 10 00007FFDA8DA90E6 WebKit::DrawingAreaProxy::didReceiveMessage 11 00007FFDA9B5F03D IPC::MessageReceiverMap::dispatchMessage 12 00007FFDA9BF643B WebKit::AuxiliaryProcessProxy::dispatchMessage 13 00007FFDA9EB40CB WebKit::WebProcessProxy::dispatchMessage 14 00007FFDA8E7DC7B WebKit::WebProcessProxy::didReceiveMessage 15 00007FFDA9B2EB59 IPC::Connection::dispatchMessage 16 00007FFDA9B2EDC3 IPC::Connection::dispatchMessage 17 00007FFDA9B2F474 IPC::Connection::dispatchIncomingMessages 18 00007FFDA9B3440B IPC::Connection::enqueueIncomingMessage::<lambda_6>::operator() 19 00007FFDA9B343A7 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wc\Source\WebKit\Platform\IPC\Connection.cpp:1339:31',void>::call 20 00007FFD839422FC WTF::Function<void ()>::operator() 21 00007FFD853931C2 WTF::RunLoop::performWork 22 00007FFD8552F0B8 WTF::RunLoop::wndProc 23 00007FFD8552EFC3 WTF::RunLoop::RunLoopWndProc 24 00007FFE91D083F1 DispatchMessageW 25 00007FFE91D07EB1 DispatchMessageW 26 00007FF72F0D9BA8 wWinMain 27 00007FF72F0DB1EA __scrt_common_main_seh 28 00007FFE910F259D BaseThreadInitThunk 29 00007FFE922CAF38 RtlUserThreadStart Exception thrown at 0x00007FFD85307AB5 (JavaScriptCore.dll) in MiniBrowser.exe: 0xC0000005: Access violation writing location 0x00000000BBADBEEF.
Attachments
Fujii Hironori
Comment 1 2025-01-09 19:40:14 PST
EWS
Comment 2 2025-01-13 13:17:48 PST
Committed 288818@main (0aed73553051): <https://commits.webkit.org/288818@main> Reviewed commits have been landed. Closing PR #38823 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.