[Skia] ASSERTION FAILED: bitmap->size() == updateSize : BackingStore::incorporateUpdate(UpdateInfo &&) on a fractional device scale factor display https://bugs.webkit.org/show_bug.cgi?id=285718

Reviewed by Don Olmstead.

Windows supports fractional device scale factors. For example, 125%,
150% and 175% DPI display. BackingStore::incorporateUpdate has an
assertion that checkes a ShareableBitmap size is the bounding rect
size scaled by the device scale factor. However, this assertion failed
if the device scale factor was fractional.

<https://commits.webkit.org/279794@main> added `expandedIntSize` to
BackingStoreCairo.cpp to solve a same problem. Did the same for
BackingStoreSkia.cpp.

* Source/WebKit/UIProcess/skia/BackingStoreSkia.cpp:
(WebKit::BackingStore::incorporateUpdate):

Canonical link: https://commits.webkit.org/288818@main